<resources>
    <string name="app_name">STAR:D</string>
    <string name="common_year">년</string>
    <string name="common_month">월</string>
    <string name="common_day">일</string>
    <string name="common_confirm">확인</string>
    <string name="common_cancel">취소</string>
    <string name="common_all_view">(전문)</string>
    <string name="user_agent">Android</string>
    <string name="alert_network_disable">네트워크가 연결되지 않았습니다.</string>
    <string name="alert_ok">확인</string>
    <string name="alert_cancel">취소</string>
    <string name="alert_donotsee">그만보기</string>
    <string name="alert_security">보안유지를 위해 초기화면으로 이동합니다.</string>
    <string name="alert_network_error">정보 조회 중 오류가 발생하였습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="alert_already_main">여기가 메인입니다.</string>
    <string name="alert_permission_denied">[설정] > [권한]에서 해당 권한을 허용할 수 있습니다.</string>
    <string name="alert_permission_request_RPS">전화 접근권한 안내\n\n사용자 식별을 위해 전화(휴대기기ID) 권한을 허용해주세요.\n\n권한 허용을 하지 않으면 서비스를 이용하실 수 없습니다.</string>
    <string name="alert_permission_request_WES">저장소 접근권한 안내\n\n사진 저장을 위해 저장소 권한을 허용해주세요.\n\n권한 허용을 하지 않으면 서비스를 이용하실 수 없습니다.</string>
    <string name="alert_permission_request_CAMERA">사진 및 동영상 촬영 안내\n\n바코드 스캔을 위해 사진 및 동영상 촬영 권한을 허용해주세요.\n\n권한 허용을 하지 않으면 서비스를 이용하실 수 없습니다.</string>
    <string name="alert_checkDevice">안전한 서비스 이용 및 고객님의 정보보호를 위해 루팅된 단말기에서는 서비스 이용이 제한됩니다.</string>
    <string name="alert_first_no_uuid">사용자 인증 처리 중 장애가 발생하였습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="alert_second_no_uuid">사용자 구분을 위한 단말 기본정보를 획득하는데 지속적으로 실패했습니다.\n인증을 위한 이메일을 등록해주세요.</string>
    <string name="alert_networkRequestError">요청을 수행하는 중에 오류가 발생하였습니다.</string>
    <string name="alert_networkRequestSuccess">정상적으로 요청을 수행하였습니다.</string>
    <string name="alert_not_select_year">태어난 해를 선택해주세요.</string>
    <string name="alert_not_agree_terms">이용약관에 동의해주세요.</string>
    <string name="alert_not_agree_privacy">개인정보보호정책에 동의해주세요.</string>
    <string name="alert_not_agree_gps">위치정보이용약관에 동의해주세요.</string>
    <string name="alert_not_name">이름을 입력해주세요.</string>
    <string name="alert_not_nick">닉네임을 입력해주세요.</string>
    <string name="alert_not_id">이메일을 입력해주세요.</string>
    <string name="alert_not_login">로그인에 실패하였습니다.\n잠시 후 다시 시도해주세요.</string>
    <string name="alert_not_pwd">비밀번호를 입력해주세요.(4~10자리)</string>
    <string name="alert_confirm_pwd">비밀번호 확인을 입력해주세요.</string>
    <string name="alert_pwd_diff">비밀번호가 서로 다릅니다.</string>
    <string name="alert_empty_post">내용을 작성하셔야 합니다.</string>
    <string name="alert_join_success">정상적으로 가입되었습니다.\n로그인 해주세요.</string>
    <string name="alert_kids_limit">자녀 등록은 최대 6명까지입니다.</string>
    <string name="alert_regist_server">정상적으로 등록되었습니다.</string>
    <string name="alert_modify_server">정상적으로 수정되었습니다.</string>
    <string name="alert_delete_server">정상적으로 삭제되었습니다.</string>
    <string name="confirm_exit">종료하시겠습니까?</string>
    <string name="confirm_logout">로그아웃하시겠습니까?</string>
    <string name="confirm_post">작성하신 포스트를 저장하시겠습니까?</string>
    <string name="confirm_delete">삭제하시겠습니까?</string>
    <string name="confirm_end">최종 완료하게 됩니다. 진행하시겠습니까?</string>
    <string name="confirm_end2">최종 완료처리 하시겠습니까?</string>
    <string name="bottom_btn_1">btn</string>
    <string name="bottom_btn_2">btn</string>
    <string name="bottom_btn_3">btn</string>
    <string name="bottom_btn_4">btn</string>
    <string name="default_notification_channel_id" translatable="false">default_notification_channel</string>
    <string name="default_notification_channel_name" translatable="true">post</string>
    <string name="button_sex_male" translatable="true">남성</string>
    <string name="button_sex_female" translatable="true">여성</string>
    <string name="button_picker_year" translatable="true">태어난 해</string>
    <string name="button_start" translatable="true">시작하기</string>
    <string name="text_tutorial_one_subject" translatable="true">슬기로운 초등생활</string>
    <string name="text_tutorial_one_content" translatable="true">이렇게 사용하세요</string>
    <string name="text_tutorial_two_subject" translatable="true">할 일</string>
    <string name="text_tutorial_two_content" translatable="true">자녀들의 할 일을 리스트로 관리하세요</string>
    <string name="text_tutorial_three_subject" translatable="true">스케쥴</string>
    <string name="text_tutorial_three_content" translatable="true">자녀들의 요일별 스케쥴을 한눈에!</string>
    <string name="text_tutorial_four_subject" translatable="true">리포트</string>
    <string name="text_tutorial_four_content" translatable="true">학업 성취율을 한눈에!</string>
    <string name="text_tutorial_join_title" translatable="true">손쉬운 가입</string>
    <string name="text_join_email" translatable="true">Email로 회원가입</string>
    <string name="text_tutorial_login_title" translatable="true">Email 로그인</string>
    <string name="text_google_login" translatable="true">Google 로그인</string>
    <string name="text_kakao_login" translatable="true">Kakao로 시작</string>
    <string name="text_tutorial_find_pwd" translatable="true">비밀번호 찾기</string>
    <string name="text_auto_login" translatable="true">로그인 상태 유지</string>
    <string name="text_save_id" translatable="true">아이디 저장</string>
    <string name="text_tutorial_join" translatable="true">Email 회원가입</string>
    <string name="text_terms_anchor" translatable="true">이용약관에 동의합니다.</string>
    <string name="text_privacy_anchor" translatable="true">개인정보처리방침에 동의합니다.</string>
    <string name="text_gps_anchor" translatable="true">위치정보이용약관에 동의합니다.</string>
    <string name="text_never" translatable="true">비정상적인 접근입니다.</string>
    <string name="text_terms_title_header" translatable="true">text_terms_title_</string>
    <string name="text_terms_title_T" translatable="true">이용약관</string>
    <string name="text_terms_title_P" translatable="true">개인정보처리방침</string>
    <string name="text_terms_title_G" translatable="true">위치정보이용약관</string>
    <string name="button_menu_right" translatable="true">Menu</string>
    <string name="button_close_post" translatable="true">닫기</string>
    <string name="button_cancel_post" translatable="true">취소</string>
    <string name="button_save_post" translatable="true">저장</string>
    <string name="button_move_stat_left" translatable="true">Stat</string>
    <string name="button_1" translatable="true">btn_1</string>
    <string name="button_2" translatable="true">btn_2</string>
    <string name="past_month" translatable="true">&lt;&lt;</string>
    <string name="next_month">&gt;&gt;</string>
    <string name="title_post" translatable="true">POST</string>
    <string name="title_receiving" translatable="true">RECEIVING</string>
    <string name="title_todo" translatable="true">오늘의 학습</string>
    <string name="title_schedule" translatable="true">1주일 스케줄</string>
    <string name="title_selfdo" translatable="true">습관</string>
    <string name="title_kidslist" translatable="true">자녀 정보</string>
    <string name="title_sum" translatable="true">리포트</string>
    <string name="title_setting" translatable="true">설정</string>
    <string name="title_todo_regist" translatable="true">학습 등록</string>
    <string name="title_todo_modify" translatable="true">학습 수정</string>
    <string name="title_schedule_regist" translatable="true">스케줄 등록</string>
    <string name="title_schedule_modify" translatable="true">스케줄 수정</string>
    <string name="title_self_regist" translatable="true">습관 등록</string>
    <string name="title_self_modify" translatable="true">습관 수정</string>
    <string name="title_kids_regist" translatable="true">자녀 등록</string>
    <string name="title_kids_modify" translatable="true">자녀 수정</string>
    <string name="title_todo_regist_textbook" translatable="true">학습지</string>
    <string name="title_todo_regist_daily" translatable="true">하루학습</string>
    <string name="title_schedule_regist_alarm" translatable="true">알림</string>
    <string name="title_login_en" translatable="true">Sign in</string>
    <string name="title_login" translatable="true">로그인</string>
    <string name="title_join_en" translatable="true">Sign up</string>
    <string name="title_join" translatable="true">회원가입</string>
    <string name="empty_space" translatable="true"> </string>
    <string name="subtitle_subject" translatable="true">과 목</string>
    <string name="subtitle_subject_detail" translatable="true">세부항목</string>
    <string name="subtitle_textbook" translatable="true">학습지</string>
    <string name="subtitle_textbook_subject" translatable="true">교재명</string>
    <string name="subtitle_days" translatable="true">학습요일</string>
    <string name="subtitle_todo_amount" translatable="true">학습량</string>
    <string name="subtitle_textbook_publish" translatable="true">출판사</string>
    <string name="subtitle_dailyprogress" translatable="true">오늘 완료합니다.</string>
    <string name="subtitle_schedule_time" translatable="true">시 간</string>
    <string name="subtitle_schedule_color" translatable="true">색 상</string>
    <string name="subtitle_schedule_alarm" translatable="true">알 림</string>
    <string name="subtitle_schedule_alarm_none" translatable="true">알림 없음</string>
    <string name="subtitle_schedule_name" translatable="true">이 름</string>
    <string name="subtitle_schedule_age" translatable="true">나이</string>
    <string name="subtitle_daily_radio_1" translatable="true">하루학습</string>
    <string name="subtitle_daily_radio_2" translatable="true">총 페이지/하루학습</string>
    <string name="subtitle_daily_radio_3" translatable="true">목표일/총 페이지/하루학습</string>
    <string name="subtitle_schedule_option_1" translatable="true">알림 없음</string>
    <string name="subtitle_schedule_option_2" translatable="true">10분 전</string>
    <string name="content_todo_detail" translatable="true">세부항목을 입력해주세요.</string>
    <string name="content_todo_publisher" translatable="true">출판사를 입력해주세요.</string>
    <string name="content_todo_title" translatable="true">교재명을 입력해주세요.</string>
    <string name="content_todo_subject" translatable="true">과목을 입력해주세요.</string>
    <string name="content_dailyprogress" translatable="true">학습할 요일을 선택해주세요.</string>
    <string name="content_alarm_start_none" translatable="true">시작 시간이 설정되지 않았습니다.</string>
    <string name="content_alarm_end_none" translatable="true">종료 시간이 설정되지 않았습니다.</string>
    <string name="content_alarm_time_error" translatable="true">종료시간이 시작시간보다 커야 합니다.</string>
    <string name="content_schedule_duplicate" translatable="true">※ 요일과 시간이 중복되면 등록되지 않습니다.</string>
    <string name="content_self_limit" translatable="true">한번에 최고 3개까지 등록할 수 있습니다.</string>
    <string name="content_self_hint_1" translatable="true">첫 번째 습관을 등록하세요.</string>
    <string name="content_self_hint_2" translatable="true">두 번째 습관을 등록하세요.</string>
    <string name="content_self_hint_3" translatable="true">세 번째 습관을 등록하세요.</string>
    <string name="content_89" translatable="true">8~9</string>
    <string name="content_910" translatable="true">9~10</string>
    <string name="content_1011" translatable="true">10~11</string>
    <string name="content_1112" translatable="true">11~12</string>
    <string name="content_1213" translatable="true">12~13</string>
    <string name="content_1314" translatable="true">13~14</string>
    <string name="content_1415" translatable="true">14~15</string>
    <string name="content_1516" translatable="true">15~16</string>
    <string name="content_1617" translatable="true">16~17</string>
    <string name="content_1718" translatable="true">17~18</string>
    <string name="content_1819" translatable="true">18~19</string>
    <string name="content_1920" translatable="true">19~20</string>
    <string name="content_2021" translatable="true">20~21</string>
    <string name="content_2122" translatable="true">21~22</string>
    <string name="cell_todo_1" translatable="true">순서</string>
    <string name="cell_todo_2" translatable="true">과목</string>
    <string name="cell_todo_3" translatable="true">학습지</string>
    <string name="cell_todo_4" translatable="true">하루분량</string>
    <string name="cell_todo_5" translatable="true">완료</string>
</resources>