<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_top_receiving"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white_t75"
        android:orientation="horizontal">
        <!--<android.support.v7.widget.AppCompatButton-->
            <!--android:id="@+id/btn_move_stat_left"-->
            <!--android:layout_width="65dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="left"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:textSize="@dimen/font_18"-->
            <!--android:text="@string/button_1"/>-->
        <TextView
            android:id="@+id/vst_top_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/font_18"
            android:text="@string/title_todo"/>
        <!--<android.support.v7.widget.AppCompatButton-->
            <!--android:id="@+id/btn_menu_right"-->
            <!--android:layout_width="65dp"-->
            <!--android:layout_height="match_parent"-->
            <!--android:layout_gravity="right"-->
            <!--android:layout_marginRight="10dp"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:textSize="@dimen/font_18"-->
            <!--android:text="@string/button_2"/>-->
    </LinearLayout>

    <TableLayout
        android:id="@+id/tl_todo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18"
                android:text="@string/cell_todo_1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18"
                android:text="@string/cell_todo_2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18"
                android:text="@string/cell_todo_3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18"
                android:text="@string/cell_todo_4"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/font_18"
                android:text="@string/cell_todo_5"/>
        </TableRow>
    </TableLayout>

</LinearLayout>