<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mhd.elemantary.activity.TutorialActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@color/almost_mauve"
        android:layout_weight="7"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_tutorial_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            fontPath="fonts/DidactGothic-Regular.ttf"
            android:textSize="@dimen/font_36"
            android:textColor="@color/black"
            android:text="@string/text_tutorial_input_subject"
            tools:text="@string/text_tutorial_input_subject"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <RadioButton
                android:id="@+id/btn_male"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:textSize="20sp"
                android:checked="true"
                android:text="@string/button_sex_male"/>
            <RadioButton
                android:id="@+id/btn_female"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:textSize="20sp"
                android:allowUndo="false"
                android:text="@string/button_sex_female"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_year"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:text="@string/button_picker_year"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_terms_anchor" />
                <TextView
                    android:id="@+id/tv_terms_all_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    fontPath="fonts/DidactGothic-Regular.ttf"
                    android:textColor="@color/black"
                    android:text="@string/common_all_view"
                    tools:text="@string/common_all_view"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkPrivacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_privacy_anchor" />
                <TextView
                    android:id="@+id/tv_privacy_all_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    fontPath="fonts/DidactGothic-Regular.ttf"
                    android:textColor="@color/black"
                    android:text="@string/common_all_view"
                    tools:text="@string/common_all_view"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkGps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_gps_anchor" />
                <TextView
                    android:id="@+id/tv_gps_all_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    fontPath="fonts/DidactGothic-Regular.ttf"
                    android:textColor="@color/black"
                    android:text="@string/common_all_view"
                    tools:text="@string/common_all_view"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@color/black_overlay"
        android:layout_weight="3">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_start"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:text="@string/button_start"/>
    </LinearLayout>

</LinearLayout>
