<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical"
    tools:context=".activity.RegistTodoActivity">

    <include
        android:id="@+id/include"
        layout="@layout/common_back_title"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <LinearLayout
        android:id="@+id/ll_top_regist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/screen_padding"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/line_padding"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_self_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/length_10"
                android:background="@drawable/edit_border"
                android:fontFamily="@font/main_font"
                android:hint="@string/content_self_hint_1"
                android:includeFontPadding="false"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/font_18" />

            <EditText
                android:id="@+id/et_self_title_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/length_10"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/main_font"
                android:includeFontPadding="false"
                android:textSize="@dimen/font_18"
                android:textColor="@color/black"
                android:hint="@string/content_self_hint_2"
                android:inputType="textPersonName"
                android:background="@drawable/edit_border"
                android:textColorHint="@color/gray" />
            <EditText
                android:id="@+id/et_self_title_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:fontFamily="@font/main_font"
                android:includeFontPadding="false"
                android:textSize="@dimen/font_18"
                android:textColor="@color/black"
                android:hint="@string/content_self_hint_3"
                android:inputType="textPersonName"
                android:background="@drawable/edit_border"
                android:textColorHint="@color/gray" />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/ll_self_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/line_padding"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/main_font"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:background="@color/white"
                android:textSize="@dimen/font_18"
                android:text="@string/content_self_limit"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/line_padding"
            android:orientation="horizontal">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_gravity="bottom"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_todo_cancel"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="12"
                android:background="@drawable/btn_back_border"
                android:text="@string/button_cancel_post"
                android:layout_gravity="start"
                android:padding="2dp"
                android:fontFamily="@font/main_font"
                android:includeFontPadding="false"
                android:textColor="@color/main_theme"
                android:textSize="@dimen/font_16" />
            <View
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="2"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_todo_save"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_weight="12"
                android:background="@drawable/btn_back_fill"
                android:text="@string/button_save_post"
                android:layout_gravity="end"
                android:fontFamily="@font/main_font"
                android:includeFontPadding="false"
                android:textColor="@color/white"
                android:padding="2dp"
                android:textSize="@dimen/font_16" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>